# log-streamer

./: CMakeLists.txt  README.md  log_common.cpp  log_common.h  log_file_processor.cpp  log_file_processor.h  log_file_processor_test.cpp  log_file_reader.cpp  log_file_reader.h  log_file_reader_test.cpp  main.cpp  test_main.cpp
